# CLI_stream

./: .gitignore  LICENSE  README.md  cliStream.ipynb  requirements.txt  searchDownload.py  streamCLI.py  test.ipynb
.github/workflows/: release-publish.yml  winget-submit.yml
cli/: stream.py
cli_player/: .gitignore  README.md  pyproject.toml  stream.py
logic/: gospel_songs.csv
mobile/: app.json  package.json  pnpm-lock.yaml
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  playlists.tsx
mobile/components/: branded-splash.tsx  music-app-shell.tsx
mobile/constants/: wireframe-theme.ts
mobile/services/: music-api.ts
stream-cli/: PUBLISHING.md  README.md  pyproject.toml  requirements.txt  stream.py  stream.spec
stream-cli/cli_music/: __init__.py  api.py  auth.py  constants.py  downloads.py  keyboard.py  main.py  net.py  player.py  playlist.py  prompts.py  search.py  streaming.py  ui.py
stream-cli/cli_music.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stream-cli/debian/: changelog  control  copyright  rules
stream-cli/manifests/b/bonnie-boni/cli-music/0.1.6/: bonnie-boni.cli-music.installer.yaml  bonnie-boni.cli-music.locale.en-US.yaml  bonnie-boni.cli-music.yaml
stream-cli/manifests/b/bonnie-boni/cli-music/v0.1.7/: bonnie-boni.cli-music.installer.yaml  bonnie-boni.cli-music.locale.en-US.yaml  bonnie-boni.cli-music.yaml
stream-cli/winget/: submit-v0.1.7.ps1  submit-with-wingetcreate.ps1
stream-cli/winget/manifests/b/BonnieBoni/CliMusic/0.1.1/: BonnieBoni.CliMusic.installer.yaml  BonnieBoni.CliMusic.locale.en-US.yaml  BonnieBoni.CliMusic.yaml
stream-cli/winget/manifests/b/BonnieBoni/CliMusic/0.1.7/: BonnieBoni.CliMusic.installer.yaml  BonnieBoni.CliMusic.locale.en-US.yaml  BonnieBoni.CliMusic.yaml
test/: index.html  recommender.ipynb  searchDownload.py
test/logic/: gospel_songs.csv
