[project]
name = "cli-music"
version = "0.1.7"
description = "A terminal-based music player that searches, streams audio, and supports downloads."
authors = [
    {name = "bonnie-boni",email = "xanensismo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp",
    "python-dotenv",
    "pandas",
    "rich",
    "questionary",
    "typer",
    "psutil"
]

[project.scripts]
cli-music = "cli_music.main:run"

[tool.setuptools]
packages = ["cli_music"]


[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
